@@ -9,7 +9,7 @@ vec.equal <- function(x, y, tol=1e-12, verbose=TRUE) {
   if (length(x) == length(y)) {
     noteq <- x != y # abs(x-y) undefined if both are +Inf or -Inf
     max.diff <- if (any(noteq)) max(abs(x[noteq] - y[noteq])) else 0
-    if (verbose && max.diff > max(.Machine$double.eps, .Machine$double.neg.eps)) {
+    if (verbose && max.diff > 2 * max(.Machine$double.eps, .Machine$double.neg.eps)) {
       cat(sprintf("vec.equal: largest difference between vectors = %g\n", max.diff))
     }
     if (max.diff < tol) TRUE else FALSE
@@ -53,6 +53,45 @@ stopifnot(vec.equal(sqrt(t), tsqrt.dsm))
 tlog.dsm <- dsm.score(M.dsm, score="t-score", transform="log", matrix.only=TRUE) # logarithmic transformation
 stopifnot(vec.equal(log(t+1), tlog.dsm))
 
+## validate score functions based on full contingency table
+M.R1 <- outer(f1, rep(1, ncol(M)))
+M.R2 <- N - M.R1
+M.C1 <- outer(rep(1, nrow(M)), f2)
+M.C2 <- N - M.C1
+M.O11 <- M
+M.O12 <- M.R1 - M.O11
+M.O21 <- M.C1 - M.O11
+M.O22 <- M.C2 - M.O12
+M.E11 <- M.R1 * M.C1 / N # == M.exp
+M.E12 <- M.R1 * M.C2 / N
+M.E21 <- M.R2 * M.C1 / N
+M.E22 <- M.R2 * M.C2 / N
+
+G2 <- 2 * ( # log-likelihood (sparse and signed non-sparse
+  ifelse(M.O11 > 0, M.O11 * log(M.O11 / M.E11), 0) +
+  ifelse(M.O12 > 0, M.O12 * log(M.O12 / M.E12), 0) +
+  ifelse(M.O21 > 0, M.O21 * log(M.O21 / M.E21), 0) +
+  ifelse(M.O22 > 0, M.O22 * log(M.O22 / M.E22), 0)
+)
+G2.sparse <- ifelse(M.O11 > M.E11, G2, 0)
+G2 <- ifelse(M.O11 >= M.E11, G2, -G2)
+
+G2.sparse.dsm <- dsm.score(M.dsm, score="log-likelihood", matrix.only=TRUE)
+stopifnot(vec.equal(G2.sparse, G2.sparse.dsm))
+G2.dsm <- dsm.score(M.dsm, score="log-likelihood", sparse=FALSE, negative.ok=TRUE, matrix.only=TRUE)
+stopifnot(vec.equal(G2, G2.dsm))
+
+X2 <- # chi-squared (with Yates correction)
+   N * (abs(M.O11 * M.O22 - M.O12 * M.O21) - N / 2) ^ 2 / (M.R1 * M.R2 * M.C1 * M.C2)
+X2.sparse <- ifelse(M.O11 > M.E11, X2, 0)
+X2 <- ifelse(M.O11 >= M.E11, X2, -X2)
+
+X2.sparse.dsm <- dsm.score(M.dsm, score="chi-squared", matrix.only=TRUE)
+stopifnot(vec.equal(X2.sparse, X2.sparse.dsm))
+X2.dsm <- dsm.score(M.dsm, score="chi-squared", sparse=FALSE, negative.ok=TRUE, matrix.only=TRUE)
+stopifnot(vec.equal(X2, X2.dsm))
+
+
 ## compare with sparse matrix format
 S <- as(M, "sparseMatrix")
 stopifnot(dsm.is.canonical(S)$canonical && dsm.is.canonical(S)$sparse)
@@ -68,6 +107,24 @@ tsqrt.sparse <- dsm.score(S.dsm, score="t-score", transform="root", matrix.only=
 stopifnot(vec.equal(tsqrt.dsm, tsqrt.sparse))
 tlog.sparse <- dsm.score(S.dsm, score="t-score", transform="log", matrix.only=TRUE)
 stopifnot(vec.equal(tsqrt.dsm, tsqrt.sparse))
+G2.sparse.Sdsm <- dsm.score(S.dsm, score="log-likelihood", matrix.only=TRUE)
+stopifnot(vec.equal(G2.sparse, G2.sparse.Sdsm))
+X2.sparse.Sdsm <- dsm.score(S.dsm, score="chi-squared", matrix.only=TRUE)
+stopifnot(vec.equal(X2.sparse, X2.sparse.Sdsm))
+
+## pseudo-sparse AM (allowing negative scores, but only for nonzero entries of sparse matrix)
+G2.nz.dsm <- dsm.score(M.dsm, score="log-likelihood", sparse=FALSE, negative.ok="nonzero", matrix.only=TRUE)
+stopifnot(vec.equal(G2, G2.nz.dsm)) # should be the same as negative.ok=TRUE for dense matrix
+X2.nz.dsm <- dsm.score(M.dsm, score="chi-squared", sparse=FALSE, negative.ok="nonzero", matrix.only=TRUE)
+stopifnot(vec.equal(X2, X2.nz.dsm))
+
+G2.nz <- ifelse(M.O11 > 0, G2, 0) # for sparse matrix, compute signed scores only for nonzero cells
+G2.nz.Sdsm <- dsm.score(S.dsm, score="log-likelihood", sparse=FALSE, negative.ok="nonzero", matrix.only=TRUE)
+stopifnot(vec.equal(G2.nz, G2.nz.Sdsm))
+X2.nz <- ifelse(M.O11 > 0, X2, 0)
+X2.nz.Sdsm <- dsm.score(S.dsm, score="chi-squared", sparse=FALSE, negative.ok="nonzero", matrix.only=TRUE)
+stopifnot(vec.equal(X2.nz, X2.nz.Sdsm))
+
 
 ## column scaling
 tsqrt.std <- scale(sqrt(t)) # standardization
@@ -105,6 +162,13 @@ my.ll <- function (O, E, ...) {
   ll <- 2 * (ifelse(O > 0, O * log(O / E), 0) - (O - E))
   ifelse(O >= E, ll, -ll)
 }
+my.G2 <- function (O11, O12, O21, O22, E11, E12, E21, E22, ...) {
+  ll <- ifelse(O11 > 0, O11 * log(O11 / E11), 0) +
+    ifelse(O12 > 0, O12 * log(O12 / E12), 0) +
+    ifelse(O21 > 0, O21 * log(O21 / E21), 0) +
+    ifelse(O22 > 0, O22 * log(O22 / E22), 0)
+  ifelse(O11 >= E11, 2 * ll, -2 * ll)
+}
 my.tfidf <- function (O11, cols, ..., K=7) O11 * log(1 / cols$df) # need to annotate df explicitly
 
 TT <- DSM_TermTerm    # dense co-occurrence matrix
@@ -112,10 +176,10 @@ TT$cols <- transform(TT$cols, df=((nnzero + 1) / (nrow(TT) + 1)))
 TC <- DSM_TermContext # sparse co-occurrence matrix
 TC$cols <- transform(TC$cols, df=((nnzero + 1) / (nrow(TC) + 1)))
 
-test.AM <- function(model, AM.name, AM.fun, transform="none", sparse=TRUE) {
+test.AM <- function(model, AM.name, AM.fun, transform="none", sparse=TRUE, negative.ok=!sparse) {
   stopifnot(vec.equal(
-    dsm.score(model, AM.name, transform=transform, sparse=sparse, negative.ok=TRUE, matrix.only=TRUE),
-    dsm.score(model, AM.fun,  transform=transform, sparse=sparse, negative.ok=TRUE, matrix.only=TRUE, batchsize=10)))
+    dsm.score(model, AM.name, transform=transform, sparse=sparse, negative.ok=negative.ok, matrix.only=TRUE),
+    dsm.score(model, AM.fun,  transform=transform, sparse=sparse, negative.ok=negative.ok, matrix.only=TRUE, batchsize=10)))
 }
 
 ## dense matrix, sparse AM
@@ -123,6 +187,7 @@ test.AM(TT, "MI", my.MI)
 test.AM(TT, "t-score", my.tscore)
 test.AM(TT, "Dice", my.Dice)
 test.AM(TT, "simple-ll", my.ll)
+test.AM(TT, "log-likelihood", my.G2)
 test.AM(TT, "tf.idf", my.tfidf)
 
 test.AM(TT, "simple-ll", my.ll, transform="log")
@@ -134,6 +199,7 @@ test.AM(TT, "MI", my.MI, sparse=FALSE)
 test.AM(TT, "t-score", my.tscore.disc, sparse=FALSE)
 test.AM(TT, "Dice", my.Dice, sparse=FALSE)
 test.AM(TT, "simple-ll", my.ll, sparse=FALSE)
+test.AM(TT, "log-likelihood", my.G2, sparse=FALSE)
 test.AM(TT, "tf.idf", my.tfidf, sparse=FALSE)
 
 test.AM(TT, "simple-ll", my.ll, transform="log", sparse=FALSE)
@@ -145,6 +211,7 @@ test.AM(TC, "MI", my.MI)
 test.AM(TC, "t-score", my.tscore)
 test.AM(TC, "Dice", my.Dice)
 test.AM(TC, "simple-ll", my.ll)
+test.AM(TT, "log-likelihood", my.G2)
 test.AM(TC, "tf.idf", my.tfidf)
 
 test.AM(TC, "simple-ll", my.ll, transform="log")
@@ -156,8 +223,21 @@ test.AM(TC, "MI", my.MI, sparse=FALSE)
 test.AM(TC, "t-score", my.tscore.disc, sparse=FALSE)
 test.AM(TC, "Dice", my.Dice, sparse=FALSE)
 test.AM(TC, "simple-ll", my.ll, sparse=FALSE)
+test.AM(TT, "log-likelihood", my.G2, sparse=FALSE)
 test.AM(TC, "tf.idf", my.tfidf, sparse=FALSE)
 
 test.AM(TC, "simple-ll", my.ll, transform="log", sparse=FALSE)
 test.AM(TC, "simple-ll", my.ll, transform="root", sparse=FALSE)
 test.AM(TC, "simple-ll", my.ll, transform="sigmoid", sparse=FALSE)
+
+## sparse matrix, dense AM (only for nonzero cells)
+test.AM(TC, "MI", my.MI, sparse=FALSE, negative.ok="nonzero")
+test.AM(TC, "t-score", my.tscore.disc, sparse=FALSE, negative.ok="nonzero")
+test.AM(TC, "Dice", my.Dice, sparse=FALSE, negative.ok="nonzero")
+test.AM(TC, "simple-ll", my.ll, sparse=FALSE, negative.ok="nonzero")
+test.AM(TT, "log-likelihood", my.G2, sparse=FALSE, negative.ok="nonzero")
+test.AM(TC, "tf.idf", my.tfidf, sparse=FALSE, negative.ok="nonzero")
+
+test.AM(TC, "simple-ll", my.ll, transform="log", sparse=FALSE, negative.ok="nonzero")
+test.AM(TC, "simple-ll", my.ll, transform="root", sparse=FALSE, negative.ok="nonzero")
+test.AM(TC, "simple-ll", my.ll, transform="sigmoid", sparse=FALSE, negative.ok="nonzero")
